# hermetic-launcher

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  flake.nix  llvm.patch
.bcr/: presubmit.yml  source.template.json
.cargo/: config.toml
.github/workflows/: ci.yml  release-rules.yml  release.yml  release_prep.sh
docs/: BUILD.bazel
finalize-stub/: BUILD.bazel  Cargo.toml
finalize-stub/.cargo/: config.toml
finalize-stub/src/: main.rs
launcher/: BUILD.bazel  launcher_binary.bzl  lib.bzl
launcher/private/: BUILD.bazel  extensions.bzl  stub_finalizer_toolchain.bzl  stub_template_toolchain.bzl
launcher/private/prebuilt/: BUILD.bazel
launcher/private/providers/: BUILD.bazel
launcher/private/rules/: BUILD.bazel  launcher_binary.bzl  lib.bzl
launcher/private/smoke/: BUILD.bazel
runfiles-stub/: BUILD.bazel
runfiles-stub/src/: linux.rs  macos.rs  main.rs  windows.rs
src/: linux.rs  macos.rs  main.rs  windows.rs
stub/: lib.bzl  stub_binary.bzl
stub/private/: extensions.bzl  stub_finalizer_toolchain.bzl  stub_template_toolchain.bzl
stub/private/prebuilt/: BUILD.bazel
stub/private/providers/: finalizer_toolchain_info.bzl  stub_template_toolchain_info.bzl
stub/private/rules/: lib.bzl  stub_binary.bzl
template/: BUILD.bazel  lib.bzl  template_binary.bzl
template/private/: extensions.bzl  stub_finalizer_toolchain.bzl  stub_template_toolchain.bzl
template/private/prebuilt/: BUILD.bazel
template/private/rules/: lib.bzl  template_binary.bzl
tools/create-release-archive/src/: main.rs
