module(
    name = "hermetic_launcher",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

non_module_dependencies = use_extension("//launcher/private:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "finalize_stub_aarch64_linux", "finalize_stub_aarch64_macos", "finalize_stub_x86_64_linux", "finalize_stub_x86_64_macos", "finalize_stub_x86_64_windows", "runfiles_stub_aarch64_linux", "runfiles_stub_aarch64_macos", "runfiles_stub_x86_64_linux", "runfiles_stub_x86_64_macos", "runfiles_stub_x86_64_windows")

register_toolchains("//launcher/private/prebuilt:all")

###################################

bazel_dep(name = "rules_cc", version = "0.2.16", dev_dependency = True)
bazel_dep(name = "rules_platform", version = "0.1.0", dev_dependency = True)

RUST_TRIPLES = [
    "aarch64-unknown-linux-musl",
    "aarch64-apple-darwin",
    "aarch64-pc-windows-gnullvm",
    "x86_64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-gnullvm",
]

bazel_dep(name = "rules_rs", version = "0.0.20", dev_dependency = True)
crate = use_extension("@rules_rs//rs:extensions.bzl", "crate", dev_dependency = True)
crate.from_cargo(
    cargo_lock = "//finalize-stub:Cargo.lock",
    cargo_toml = "//finalize-stub:Cargo.toml",
    platform_triples = RUST_TRIPLES,
)
use_repo(crate, "crates")

crate.annotation(
    additive_build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "windows_import_lib",
    static_library = glob(["lib/*.a"])[0],
)
""",
    crate = "windows_x86_64_gnullvm",
    deps = [":windows_import_lib"],
    gen_build_script = "off",
)

crate.annotation(
    additive_build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "windows_import_lib",
    static_library = glob(["lib/*.a"])[0],
)
""",
    crate = "windows_aarch64_gnullvm",
    deps = [":windows_import_lib"],
    gen_build_script = "off",
)

bazel_dep(name = "rules_rust", version = "0.68.1", dev_dependency = True)
single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "//:rules_rust.patch",
        "//:rules_rust_windows_gnu.patch",
    ],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    extra_target_triples = RUST_TRIPLES,
    versions = ["1.91.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.3.1", dev_dependency = True)
archive_override(
    module_name = "toolchains_llvm_bootstrapped",
    integrity = "sha256-yRDgDshs4PesvkmzSCwNutJjObeF00870DNoJ+WtJhQ=",
    patch_strip = 1,
    patches = [
        "//:llvm.patch",
    ],
    strip_prefix = "toolchains_llvm_bootstrapped-120bb9689efe19cedadec5deb7c45508ad8df4d4",
    urls = ["https://github.com/cerisier/toolchains_llvm_bootstrapped/archive/120bb9689efe19cedadec5deb7c45508ad8df4d4/master.tar.gz"],
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
    dev_dependency = True,
)
