load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

toolchain_type(
    name = "template_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "template_exec_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "finalizer_toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "launcher_binary_bzl",
    srcs = ["launcher_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//launcher/private/rules:launcher_binary_bzl"],
)

bzl_library(
    name = "lib_bzl",
    srcs = ["lib.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//launcher/private/rules:lib_bzl"],
)
