load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
    visibility = ["//:__pkg__"],
    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
)

bzl_library(
    name = "stub_finalizer_toolchain_bzl",
    srcs = ["stub_finalizer_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//launcher/private/providers:finalizer_toolchain_info_bzl"],
)

bzl_library(
    name = "stub_template_toolchain_bzl",
    srcs = ["stub_template_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//launcher/private/providers:stub_template_toolchain_info_bzl"],
)
