load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "finalizer_toolchain_info_bzl",
    srcs = ["finalizer_toolchain_info.bzl"],
    visibility = ["//launcher/private:__pkg__"],
)

bzl_library(
    name = "stub_template_toolchain_info_bzl",
    srcs = ["stub_template_toolchain_info.bzl"],
    visibility = ["//launcher/private:__pkg__"],
)
