load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "launcher_binary_bzl",
    srcs = ["launcher_binary.bzl"],
    visibility = ["//launcher:__pkg__"],
    deps = [":lib_bzl"],
)

bzl_library(
    name = "lib_bzl",
    srcs = ["lib.bzl"],
    visibility = ["//launcher:__pkg__"],
)
